
2004/01/15 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- DB: 
    - added "nodeflags" (intended to be used for flagging "dirty" nodes etc)
    - every modification of a node (except modifying nodeflags) will mark that
      node and all its parents as dirty.


2004-01-14  Christian Stimming <stimming@tuhh.de>

	* configure.ac: Fix typo -- $() is a variable in a Makefile, but
	in configure it's a subshell.

2004/01/14 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added windoze.m4 to get some windows paths
- fixed types.m4 (was not removing conf.uint32 when finished)
- msgengine: GetHighestTrustLevel now also takes the parents of the given
  node into account (instead of only the parent of the refererring node)
- os/inetaddr: added GWEN_InetAddr_GetCapabilities to check whether a given
  Address Family (or feature) exists)


2004/01/12 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- posix/process.c: increased needed log level for error messages


2004/01/11 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a bug in gwenhywfar.m4
- applied a patch submitted by Ronny Buchmann which turns the specfile into a 
  multi-distribution spec file.
- applied another patch submitted by Ronny Buchmann which allows for building
  distribution-specific RPMs (in conjunction with the patch above)


2004/01/10 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- logger: added function GWEN_Logger_AddLogger. This functions allows to
  log to multiple loggers in parallel. This is interesting for debugging
  purposes when you still want to log to syslog (or whatever service you
  like) but want to additionally log to a log file or stderr.
- Makefile.cvs: added my own target, since somebody always comments out my
  "./configure" ;-) And I really think I know who does ;-)