@@ -1,0 +1,48 @@
+/***************************************************************************
+ $RCSfile$
+ -------------------
+ cvs         : $Id$
+ begin       : Sat Jan 17 2004
+ copyright   : (C) 2004 by Martin Preuss
+ email       : martin@libchipcard.de
+
+ ***************************************************************************
+ *                                                                         *
+ *   This library is free software; you can redistribute it and/or         *
+ *   modify it under the terms of the GNU Lesser General Public            *
+ *   License as published by the Free Software Foundation; either          *
+ *   version 2.1 of the License, or (at your option) any later version.    *
+ *                                                                         *
+ *   This library is distributed in the hope that it will be useful,       *
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU     *
+ *   Lesser General Public License for more details.                       *
+ *                                                                         *
+ *   You should have received a copy of the GNU Lesser General Public      *
+ *   License along with this library; if not, write to the Free Software   *
+ *   Foundation, Inc., 59 Temple Place, Suite 330, Boston,                 *
+ *   MA  02111-1307  USA                                                   *
+ *                                                                         *
+ ***************************************************************************/
+
+
+#ifndef GWEN_WAIT_CALLBACK_P_H
+#define GWEN_WAIT_CALLBACK_P_H
+
+
+#include <gwenhywfar/waitcallback.h>
+
+
+struct GWEN_WAITCALLBACK_CTX {
+  GWEN_WAITCALLBACK_FN waitCallbackFn;
+  unsigned int usage;
+  void *data;
+};
+
+
+GWEN_WAITCALLBACK_RESULT GWEN_WaitCallback_internal(int count);
+
+
+
+#endif
+
